# the-reviewer

./: README.md  agents.md  alex-stone.json  eslint.config.js  package.json  pnpm-lock.yaml  project.md  tecnico-direto.persona.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs  persona.rs  review.rs
src-tauri/src/storage/: fs.rs
src/__tests__/: scaffold.test.ts
src/__tests__/components/: OllamaStatusBanner.test.tsx  PersonaList.test.tsx  RulesEditor.test.tsx
src/__tests__/components/review/: DiffViewer.test.tsx  DocumentInput.test.tsx  ReviewHistory.test.tsx
src/__tests__/domain/: persona.test.ts  prompt.test.ts
src/__tests__/services/: ollamaService.test.ts  personaService.test.ts
src/components/: ConfirmModal.tsx  OllamaStatusBanner.tsx  RichTextEditor.tsx  Toast.tsx
src/components/personas/: ExampleEditor.tsx  GeneratedRulesModal.tsx  PersonaForm.tsx  PersonaList.tsx  RulesEditor.tsx
src/components/review/: DiffViewer.tsx  DocumentInput.tsx  ReviewHistory.tsx  ReviewProgress.tsx  ReviewResult.tsx
src/domain/: persona.ts  prompt.ts
src/pages/: AboutPage.tsx  PersonasPage.tsx  ReviewPage.tsx
src/services/: ollamaService.ts  personaService.ts
src/store/: personaStore.ts  reviewStore.ts
